# FishQuest

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  fishbase-ER-ESP.md  fishbase-ER.md  pyproject.toml  run.py
apis/FishTrack/: Makefile  README.md  pyproject.toml  requirements.txt  run.py
apis/FishTrack/app/: __init__.py
apis/OpenSeaLife/: .env.example  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
apis/OpenSeaLife/app/: __init__.py  config.py  error_handlers.py  exceptions.py
apis/OpenSeaLife/app/routes/: catalog.py  health.py
apis/OpenSeaLife/app/routes/ropensci_fishbase/: __init__.py  comnames.py  countref.py
apis/OpenSeaLife/app/schemas/queries/: comnames.py  countref.py  page.py
apis/OpenSeaLife/app/services/: catalog.py  fishbase.py  hf_client.py
apis/OpenSeaLife/app/services/queries/: base.py  comnames.py  countref.py
apis/common/: pyproject.toml
apis/common/common/base/: models.py  service.py
apis/common/common/catalog/: queries.py  schemas.py
apis/common/common/datasource_health/: queries.py  schemas.py
apis/common/common/errors/: schemas.py
app/: __init__.py  schemas.py
app/routes/: catalog.py  health.py
app/services/: catalog.py  fishbase.py  hf_client.py
